@@ -1,38 +1,0 @@
-<?xml version="1.0"?>
-<gconfschemafile>
-  <schemalist>
-    <schema>
-      <key>/schemas/desktop/gnome/applications/help_viewer/exec</key>
-      <applyto>/desktop/gnome/applications/help_viewer/exec</applyto>
-      <owner>gnome</owner>
-      <type>string</type>
-      <default>nautilus</default>
-      <locale name="C">
-        <short>Default help viewer</short>
-        <long>Default help viewer</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/desktop/gnome/applications/help_viewer/needs_term</key>
-      <applyto>/desktop/gnome/applications/help_viewer/needs_term</applyto>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>false</default>
-      <locale name="C">
-        <short>Help viewer needs terminal</short>
-        <long>Whether the default help viewer needs a terminal to run</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/desktop/gnome/applications/help_viewer/accepts_urls</key>
-      <applyto>/desktop/gnome/applications/help_viewer/accepts_urls</applyto>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Browser understands remote</short>
-        <long>Whether the default help viewer accepts URLs</long>
-      </locale>
-    </schema>
-  </schemalist>
-</gconfschemafile>
