@@ -1,3 +1,10 @@
+2007-12-16  Christian Persch  <chpe@gnome.org>
+
+	* schemas/Makefile.am:
+	R schemas/desktop_gnome_applications_help_viewer.schemas.in:
+	Remove the unused, obsolete and buggy schema for the help viewer app.
+	Bug #437827.
+
 2007-12-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* schemas/desktop_gnome_interface.schemas.in.in: replace the defunct
